modify CheckAndSend, app.config

--- a/ucit_bot_console/App.config
+++ b/ucit_bot_console/App.config
@@ -1,11 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
     <add key="telegram_token" value="123" />
     <!-- Путь где лежат файлы -->
-    <add key="file_path" value="c:\YandexDisk\UCIT2017\rasp\" />
+    <add key="file_path" value="d:\YandexDisk\UCIT2017\rasp\" />
     <!-- основной чат куда отправлять сообщения от бота, бот должен быть администратором чата -->
-    <add key="telegram_chat_id" value="123" />
+    <add key="telegram_chat_id" value="-1001364053151" />
     <!-- страница ВК для парсинга -->
     <add key="vk_wall_id" value="108679504" />
     <!-- ключ для ВК API -->
@@ -14,8 +14,14 @@
     <add key="url" value="http://ucit.ru/rasp.php" />
     <!-- группа с расписанием для парсинга-->
     <add key="pattern_group" value="февраля 2018" />
+    <!-- ЕСЛИ ЗАПОЛНЕНА ГРУППА pattern_group, то оставить это значение пустым. перед какой строкой отрезать лишнее, обязательно экранировать символы < так &lt; и > так &gt;  точку с запятой тоже надо писать-->
+    <add key="pattern_start" value="&lt;div align=right&gt;" />
     <!-- после какой строки отрезать лишнее, обязательно экранировать символы < так &lt; и > так &gt;  точку с запятой тоже надо писать-->
-    <add key="pattern_end" value="&lt;div align=right&gt;" />         
+    <add key="pattern_end" value="Объявления" />
+    <!-- размер страницы высота-->
+    <add key="browser_height" value="500" />
+    <!-- размер страницы ширина-->
+    <add key="browser_widht" value="900" />
     <!--  через какое время проверять сайт, в секундах-->
     <add key="sleep_time" value="14400000" />
     <!-- ниже в адресе ссылки все & надо заменить на &amp;  точку с запятой тоже надо писать-->
